added graphical tritrieval in history